# seq2c-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
