[package]
name = "seq2c-rs"
version = "0.1.0"
edition = "2021"
authors = ["Stanislav Zubenko <5831286+Dantistnfs@users.noreply.github.com>"]

[dependencies]
clap = { version = "4.5.4", features = ["std", "derive"], default-features = false}
rust-htslib = { version = "0.46.0", default-features = false} 
bio = { version = "1.6.0" }

[profile.release]
codegen-units = 1
lto = true
strip = true
#debug = true
